// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`include > Field is excluded via \`skip\` > Should disregard \`include.when\` and avoid running the test 1`] = `
Promise {
  "dump": [Function],
  "errorCount": 1,
  "errors": [
    SummaryFailure {
      "fieldName": "field_2",
      "groupName": undefined,
      "message": undefined,
    },
  ],
  "getError": [Function],
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getMessage": [Function],
  "getWarning": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": {},
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "isPending": [Function],
  "isTested": [Function],
  "isValid": [Function],
  "isValidByGroup": [Function],
  "pendingCount": 0,
  "suiteName": undefined,
  "testCount": 1,
  "tests": {
    "field_1": SummaryBase {
      "errorCount": 0,
      "errors": [],
      "pendingCount": 0,
      "testCount": 0,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "field_2": SummaryBase {
      "errorCount": 1,
      "errors": [],
      "pendingCount": 0,
      "testCount": 1,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
  },
  "types": undefined,
  "valid": false,
  "warnCount": 0,
  "warnings": [],
}
`;

exports[`include > Field is excluded via \`skip\` > Should disregard \`include\` and avoid running the test 1`] = `
Promise {
  "dump": [Function],
  "errorCount": 1,
  "errors": [
    SummaryFailure {
      "fieldName": "field_2",
      "groupName": undefined,
      "message": undefined,
    },
  ],
  "getError": [Function],
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getMessage": [Function],
  "getWarning": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": {},
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "isPending": [Function],
  "isTested": [Function],
  "isValid": [Function],
  "isValidByGroup": [Function],
  "pendingCount": 0,
  "suiteName": undefined,
  "testCount": 1,
  "tests": {
    "field_1": SummaryBase {
      "errorCount": 0,
      "errors": [],
      "pendingCount": 0,
      "testCount": 0,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "field_2": SummaryBase {
      "errorCount": 1,
      "errors": [],
      "pendingCount": 0,
      "testCount": 1,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
  },
  "types": undefined,
  "valid": false,
  "warnCount": 0,
  "warnings": [],
}
`;

exports[`include > Field is excluded via \`skip\` > should disregard \`include.when\` and avoid running the test 1`] = `
Promise {
  "dump": [Function],
  "errorCount": 1,
  "errors": [
    SummaryFailure {
      "fieldName": "field_2",
      "groupName": undefined,
      "message": undefined,
    },
  ],
  "getError": [Function],
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getMessage": [Function],
  "getWarning": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": {},
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "isPending": [Function],
  "isTested": [Function],
  "isValid": [Function],
  "isValidByGroup": [Function],
  "pendingCount": 0,
  "suiteName": undefined,
  "testCount": 1,
  "tests": {
    "field_1": SummaryBase {
      "errorCount": 0,
      "errors": [],
      "pendingCount": 0,
      "testCount": 0,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "field_2": SummaryBase {
      "errorCount": 1,
      "errors": [],
      "pendingCount": 0,
      "testCount": 1,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
  },
  "types": undefined,
  "valid": false,
  "warnCount": 0,
  "warnings": [],
}
`;

exports[`include > Field is excluded via \`skip\` > should disregard \`include\` and avoid running the test 1`] = `
Promise {
  "dump": [Function],
  "errorCount": 1,
  "errors": [
    SummaryFailure {
      "fieldName": "field_2",
      "groupName": undefined,
      "message": undefined,
    },
  ],
  "getError": [Function],
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getMessage": [Function],
  "getWarning": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": {},
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "isPending": [Function],
  "isTested": [Function],
  "isValid": [Function],
  "isValidByGroup": [Function],
  "pendingCount": 0,
  "suiteName": undefined,
  "testCount": 1,
  "tests": {
    "field_1": SummaryBase {
      "errorCount": 0,
      "errors": [],
      "pendingCount": 0,
      "testCount": 0,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "field_2": SummaryBase {
      "errorCount": 1,
      "errors": [],
      "pendingCount": 0,
      "testCount": 1,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
  },
  "types": undefined,
  "valid": false,
  "warnCount": 0,
  "warnings": [],
}
`;

exports[`include > Test is excluded via \`skip.group\` > Should disregard \`include.when\` and avoid running the test 1`] = `
Promise {
  "dump": [Function],
  "errorCount": 1,
  "errors": [
    SummaryFailure {
      "fieldName": "field_1",
      "groupName": undefined,
      "message": undefined,
    },
  ],
  "getError": [Function],
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getMessage": [Function],
  "getWarning": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": {
    "g1": {
      "field_1": SummaryBase {
        "errorCount": 0,
        "errors": [],
        "pendingCount": 0,
        "testCount": 0,
        "valid": false,
        "warnCount": 0,
        "warnings": [],
      },
      "field_2": SummaryBase {
        "errorCount": 0,
        "errors": [],
        "pendingCount": 0,
        "testCount": 0,
        "valid": false,
        "warnCount": 0,
        "warnings": [],
      },
    },
  },
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "isPending": [Function],
  "isTested": [Function],
  "isValid": [Function],
  "isValidByGroup": [Function],
  "pendingCount": 0,
  "suiteName": undefined,
  "testCount": 1,
  "tests": {
    "field_1": {
      "errorCount": 1,
      "errors": [],
      "pendingCount": 0,
      "testCount": 1,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "field_2": SummaryBase {
      "errorCount": 0,
      "errors": [],
      "pendingCount": 0,
      "testCount": 0,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
  },
  "types": undefined,
  "valid": false,
  "warnCount": 0,
  "warnings": [],
}
`;

exports[`include > Test is excluded via \`skip.group\` > Should disregard \`include\` and avoid running the test 1`] = `
Promise {
  "dump": [Function],
  "errorCount": 1,
  "errors": [
    SummaryFailure {
      "fieldName": "field_1",
      "groupName": undefined,
      "message": undefined,
    },
  ],
  "getError": [Function],
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getMessage": [Function],
  "getWarning": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": {
    "g1": {
      "field_1": SummaryBase {
        "errorCount": 0,
        "errors": [],
        "pendingCount": 0,
        "testCount": 0,
        "valid": false,
        "warnCount": 0,
        "warnings": [],
      },
      "field_2": SummaryBase {
        "errorCount": 0,
        "errors": [],
        "pendingCount": 0,
        "testCount": 0,
        "valid": false,
        "warnCount": 0,
        "warnings": [],
      },
    },
  },
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "isPending": [Function],
  "isTested": [Function],
  "isValid": [Function],
  "isValidByGroup": [Function],
  "pendingCount": 0,
  "suiteName": undefined,
  "testCount": 1,
  "tests": {
    "field_1": {
      "errorCount": 1,
      "errors": [],
      "pendingCount": 0,
      "testCount": 1,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "field_2": SummaryBase {
      "errorCount": 0,
      "errors": [],
      "pendingCount": 0,
      "testCount": 0,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
  },
  "types": undefined,
  "valid": false,
  "warnCount": 0,
  "warnings": [],
}
`;

exports[`include > Test is excluded via \`skip.group\` > should disregard \`include.when\` and avoid running the test 1`] = `
Promise {
  "dump": [Function],
  "errorCount": 1,
  "errors": [
    SummaryFailure {
      "fieldName": "field_1",
      "groupName": undefined,
      "message": undefined,
    },
  ],
  "getError": [Function],
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getMessage": [Function],
  "getWarning": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": {
    "g1": {
      "field_1": SummaryBase {
        "errorCount": 0,
        "errors": [],
        "pendingCount": 0,
        "testCount": 0,
        "valid": false,
        "warnCount": 0,
        "warnings": [],
      },
      "field_2": SummaryBase {
        "errorCount": 0,
        "errors": [],
        "pendingCount": 0,
        "testCount": 0,
        "valid": false,
        "warnCount": 0,
        "warnings": [],
      },
    },
  },
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "isPending": [Function],
  "isTested": [Function],
  "isValid": [Function],
  "isValidByGroup": [Function],
  "pendingCount": 0,
  "suiteName": undefined,
  "testCount": 1,
  "tests": {
    "field_1": {
      "errorCount": 1,
      "errors": [],
      "pendingCount": 0,
      "testCount": 1,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "field_2": SummaryBase {
      "errorCount": 0,
      "errors": [],
      "pendingCount": 0,
      "testCount": 0,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
  },
  "types": undefined,
  "valid": false,
  "warnCount": 0,
  "warnings": [],
}
`;

exports[`include > Test is excluded via \`skip.group\` > should disregard \`include\` and avoid running the test 1`] = `
Promise {
  "dump": [Function],
  "errorCount": 1,
  "errors": [
    SummaryFailure {
      "fieldName": "field_1",
      "groupName": undefined,
      "message": undefined,
    },
  ],
  "getError": [Function],
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getMessage": [Function],
  "getWarning": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": {
    "g1": {
      "field_1": SummaryBase {
        "errorCount": 0,
        "errors": [],
        "pendingCount": 0,
        "testCount": 0,
        "valid": false,
        "warnCount": 0,
        "warnings": [],
      },
      "field_2": SummaryBase {
        "errorCount": 0,
        "errors": [],
        "pendingCount": 0,
        "testCount": 0,
        "valid": false,
        "warnCount": 0,
        "warnings": [],
      },
    },
  },
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "isPending": [Function],
  "isTested": [Function],
  "isValid": [Function],
  "isValidByGroup": [Function],
  "pendingCount": 0,
  "suiteName": undefined,
  "testCount": 1,
  "tests": {
    "field_1": {
      "errorCount": 1,
      "errors": [],
      "pendingCount": 0,
      "testCount": 1,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "field_2": SummaryBase {
      "errorCount": 0,
      "errors": [],
      "pendingCount": 0,
      "testCount": 0,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
  },
  "types": undefined,
  "valid": false,
  "warnCount": 0,
  "warnings": [],
}
`;

exports[`include > Test is excluded via \`skipWhen\` > Should disregard \`include.when\` and avoid running the matching tests 1`] = `
Promise {
  "dump": [Function],
  "errorCount": 1,
  "errors": [
    SummaryFailure {
      "fieldName": "field_1",
      "groupName": undefined,
      "message": undefined,
    },
  ],
  "getError": [Function],
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getMessage": [Function],
  "getWarning": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": {},
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "isPending": [Function],
  "isTested": [Function],
  "isValid": [Function],
  "isValidByGroup": [Function],
  "pendingCount": 0,
  "suiteName": undefined,
  "testCount": 1,
  "tests": {
    "field_1": {
      "errorCount": 1,
      "errors": [],
      "pendingCount": 0,
      "testCount": 1,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
  },
  "types": undefined,
  "valid": false,
  "warnCount": 0,
  "warnings": [],
}
`;

exports[`include > Test is excluded via \`skipWhen\` > Should disregard \`include\` and avoid running the matching tests 1`] = `
Promise {
  "dump": [Function],
  "errorCount": 1,
  "errors": [
    SummaryFailure {
      "fieldName": "field_1",
      "groupName": undefined,
      "message": undefined,
    },
  ],
  "getError": [Function],
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getMessage": [Function],
  "getWarning": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": {},
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "isPending": [Function],
  "isTested": [Function],
  "isValid": [Function],
  "isValidByGroup": [Function],
  "pendingCount": 0,
  "suiteName": undefined,
  "testCount": 1,
  "tests": {
    "field_1": {
      "errorCount": 1,
      "errors": [],
      "pendingCount": 0,
      "testCount": 1,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
  },
  "types": undefined,
  "valid": false,
  "warnCount": 0,
  "warnings": [],
}
`;

exports[`include > There is an \`onlyd\` field > \`include\` is run as-is without modifiers > Should run the included test along with the onlyd test 1`] = `
Promise {
  "dump": [Function],
  "errorCount": 2,
  "errors": [
    SummaryFailure {
      "fieldName": "field_1",
      "groupName": undefined,
      "message": undefined,
    },
    SummaryFailure {
      "fieldName": "field_2",
      "groupName": undefined,
      "message": undefined,
    },
  ],
  "getError": [Function],
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getMessage": [Function],
  "getWarning": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": {},
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "isPending": [Function],
  "isTested": [Function],
  "isValid": [Function],
  "isValidByGroup": [Function],
  "pendingCount": 0,
  "suiteName": undefined,
  "testCount": 2,
  "tests": {
    "field_1": SummaryBase {
      "errorCount": 1,
      "errors": [],
      "pendingCount": 0,
      "testCount": 1,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "field_2": SummaryBase {
      "errorCount": 1,
      "errors": [],
      "pendingCount": 0,
      "testCount": 1,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
  },
  "types": undefined,
  "valid": false,
  "warnCount": 0,
  "warnings": [],
}
`;

exports[`include > There is an \`onlyd\` field > \`include\` is run as-is without modifiers > should run the included test along with the field focused by only() 1`] = `
Promise {
  "dump": [Function],
  "errorCount": 2,
  "errors": [
    SummaryFailure {
      "fieldName": "field_1",
      "groupName": undefined,
      "message": undefined,
    },
    SummaryFailure {
      "fieldName": "field_2",
      "groupName": undefined,
      "message": undefined,
    },
  ],
  "getError": [Function],
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getMessage": [Function],
  "getWarning": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": {},
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "isPending": [Function],
  "isTested": [Function],
  "isValid": [Function],
  "isValidByGroup": [Function],
  "pendingCount": 0,
  "suiteName": undefined,
  "testCount": 2,
  "tests": {
    "field_1": SummaryBase {
      "errorCount": 1,
      "errors": [],
      "pendingCount": 0,
      "testCount": 1,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "field_2": SummaryBase {
      "errorCount": 1,
      "errors": [],
      "pendingCount": 0,
      "testCount": 1,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
  },
  "types": undefined,
  "valid": false,
  "warnCount": 0,
  "warnings": [],
}
`;

exports[`include > There is an \`onlyd\` field > include().when() > \`when\` param is a boolean > when \`false\` > Should skip run included field 1`] = `
Promise {
  "dump": [Function],
  "errorCount": 1,
  "errors": [
    SummaryFailure {
      "fieldName": "field_1",
      "groupName": undefined,
      "message": undefined,
    },
  ],
  "getError": [Function],
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getMessage": [Function],
  "getWarning": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": {},
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "isPending": [Function],
  "isTested": [Function],
  "isValid": [Function],
  "isValidByGroup": [Function],
  "pendingCount": 0,
  "suiteName": undefined,
  "testCount": 1,
  "tests": {
    "field_1": SummaryBase {
      "errorCount": 1,
      "errors": [],
      "pendingCount": 0,
      "testCount": 1,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "field_2": SummaryBase {
      "errorCount": 0,
      "errors": [],
      "pendingCount": 0,
      "testCount": 0,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "field_3": SummaryBase {
      "errorCount": 0,
      "errors": [],
      "pendingCount": 0,
      "testCount": 0,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
  },
  "types": undefined,
  "valid": false,
  "warnCount": 0,
  "warnings": [],
}
`;

exports[`include > There is an \`onlyd\` field > include().when() > \`when\` param is a boolean > when \`false\` > should not run the included field 1`] = `
Promise {
  "dump": [Function],
  "errorCount": 1,
  "errors": [
    SummaryFailure {
      "fieldName": "field_1",
      "groupName": undefined,
      "message": undefined,
    },
  ],
  "getError": [Function],
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getMessage": [Function],
  "getWarning": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": {},
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "isPending": [Function],
  "isTested": [Function],
  "isValid": [Function],
  "isValidByGroup": [Function],
  "pendingCount": 0,
  "suiteName": undefined,
  "testCount": 1,
  "tests": {
    "field_1": SummaryBase {
      "errorCount": 1,
      "errors": [],
      "pendingCount": 0,
      "testCount": 1,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "field_2": SummaryBase {
      "errorCount": 0,
      "errors": [],
      "pendingCount": 0,
      "testCount": 0,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "field_3": SummaryBase {
      "errorCount": 0,
      "errors": [],
      "pendingCount": 0,
      "testCount": 0,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
  },
  "types": undefined,
  "valid": false,
  "warnCount": 0,
  "warnings": [],
}
`;

exports[`include > There is an \`onlyd\` field > include().when() > \`when\` param is a boolean > when \`true\` > Should run included field 1`] = `
Promise {
  "dump": [Function],
  "errorCount": 2,
  "errors": [
    SummaryFailure {
      "fieldName": "field_1",
      "groupName": undefined,
      "message": undefined,
    },
    SummaryFailure {
      "fieldName": "field_2",
      "groupName": undefined,
      "message": undefined,
    },
  ],
  "getError": [Function],
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getMessage": [Function],
  "getWarning": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": {},
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "isPending": [Function],
  "isTested": [Function],
  "isValid": [Function],
  "isValidByGroup": [Function],
  "pendingCount": 0,
  "suiteName": undefined,
  "testCount": 2,
  "tests": {
    "field_1": SummaryBase {
      "errorCount": 1,
      "errors": [],
      "pendingCount": 0,
      "testCount": 1,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "field_2": SummaryBase {
      "errorCount": 1,
      "errors": [],
      "pendingCount": 0,
      "testCount": 1,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "field_3": SummaryBase {
      "errorCount": 0,
      "errors": [],
      "pendingCount": 0,
      "testCount": 0,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
  },
  "types": undefined,
  "valid": false,
  "warnCount": 0,
  "warnings": [],
}
`;

exports[`include > There is an \`onlyd\` field > include().when() > \`when\` param is a boolean > when \`true\` > should run the included field 1`] = `
Promise {
  "dump": [Function],
  "errorCount": 2,
  "errors": [
    SummaryFailure {
      "fieldName": "field_1",
      "groupName": undefined,
      "message": undefined,
    },
    SummaryFailure {
      "fieldName": "field_2",
      "groupName": undefined,
      "message": undefined,
    },
  ],
  "getError": [Function],
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getMessage": [Function],
  "getWarning": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": {},
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "isPending": [Function],
  "isTested": [Function],
  "isValid": [Function],
  "isValidByGroup": [Function],
  "pendingCount": 0,
  "suiteName": undefined,
  "testCount": 2,
  "tests": {
    "field_1": SummaryBase {
      "errorCount": 1,
      "errors": [],
      "pendingCount": 0,
      "testCount": 1,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "field_2": SummaryBase {
      "errorCount": 1,
      "errors": [],
      "pendingCount": 0,
      "testCount": 1,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "field_3": SummaryBase {
      "errorCount": 0,
      "errors": [],
      "pendingCount": 0,
      "testCount": 0,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
  },
  "types": undefined,
  "valid": false,
  "warnCount": 0,
  "warnings": [],
}
`;

exports[`include > There is an \`onlyd\` field > include().when() > \`when\` param is a function > Callback evaluation > Should evaluate per test run 1`] = `
Promise {
  "dump": [Function],
  "errorCount": 2,
  "errors": [
    SummaryFailure {
      "fieldName": "field_1",
      "groupName": undefined,
      "message": undefined,
    },
    SummaryFailure {
      "fieldName": "field_1",
      "groupName": undefined,
      "message": undefined,
    },
  ],
  "getError": [Function],
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getMessage": [Function],
  "getWarning": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": {},
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "isPending": [Function],
  "isTested": [Function],
  "isValid": [Function],
  "isValidByGroup": [Function],
  "pendingCount": 0,
  "suiteName": undefined,
  "testCount": 2,
  "tests": {
    "field_1": {
      "errorCount": 2,
      "errors": [],
      "pendingCount": 0,
      "testCount": 2,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
  },
  "types": undefined,
  "valid": false,
  "warnCount": 0,
  "warnings": [],
}
`;

exports[`include > There is an \`onlyd\` field > include().when() > \`when\` param is a function > Callback evaluation > should evaluate per test run 1`] = `
Promise {
  "dump": [Function],
  "errorCount": 2,
  "errors": [
    SummaryFailure {
      "fieldName": "field_1",
      "groupName": undefined,
      "message": undefined,
    },
    SummaryFailure {
      "fieldName": "field_1",
      "groupName": undefined,
      "message": undefined,
    },
  ],
  "getError": [Function],
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getMessage": [Function],
  "getWarning": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": {},
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "isPending": [Function],
  "isTested": [Function],
  "isValid": [Function],
  "isValidByGroup": [Function],
  "pendingCount": 0,
  "suiteName": undefined,
  "testCount": 2,
  "tests": {
    "field_1": {
      "errorCount": 2,
      "errors": [],
      "pendingCount": 0,
      "testCount": 2,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
  },
  "types": undefined,
  "valid": false,
  "warnCount": 0,
  "warnings": [],
}
`;

exports[`include > There is an \`onlyd\` field > include().when() > \`when\` param is a function > when  returning\`false\` > Should skip run included field 1`] = `
Promise {
  "dump": [Function],
  "errorCount": 1,
  "errors": [
    SummaryFailure {
      "fieldName": "field_1",
      "groupName": undefined,
      "message": undefined,
    },
  ],
  "getError": [Function],
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getMessage": [Function],
  "getWarning": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": {},
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "isPending": [Function],
  "isTested": [Function],
  "isValid": [Function],
  "isValidByGroup": [Function],
  "pendingCount": 0,
  "suiteName": undefined,
  "testCount": 1,
  "tests": {
    "field_1": SummaryBase {
      "errorCount": 1,
      "errors": [],
      "pendingCount": 0,
      "testCount": 1,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "field_2": SummaryBase {
      "errorCount": 0,
      "errors": [],
      "pendingCount": 0,
      "testCount": 0,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "field_3": SummaryBase {
      "errorCount": 0,
      "errors": [],
      "pendingCount": 0,
      "testCount": 0,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
  },
  "types": undefined,
  "valid": false,
  "warnCount": 0,
  "warnings": [],
}
`;

exports[`include > There is an \`onlyd\` field > include().when() > \`when\` param is a function > when  returning\`false\` > should not run the included field 1`] = `
Promise {
  "dump": [Function],
  "errorCount": 1,
  "errors": [
    SummaryFailure {
      "fieldName": "field_1",
      "groupName": undefined,
      "message": undefined,
    },
  ],
  "getError": [Function],
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getMessage": [Function],
  "getWarning": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": {},
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "isPending": [Function],
  "isTested": [Function],
  "isValid": [Function],
  "isValidByGroup": [Function],
  "pendingCount": 0,
  "suiteName": undefined,
  "testCount": 1,
  "tests": {
    "field_1": SummaryBase {
      "errorCount": 1,
      "errors": [],
      "pendingCount": 0,
      "testCount": 1,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "field_2": SummaryBase {
      "errorCount": 0,
      "errors": [],
      "pendingCount": 0,
      "testCount": 0,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "field_3": SummaryBase {
      "errorCount": 0,
      "errors": [],
      "pendingCount": 0,
      "testCount": 0,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
  },
  "types": undefined,
  "valid": false,
  "warnCount": 0,
  "warnings": [],
}
`;

exports[`include > There is an \`onlyd\` field > include().when() > \`when\` param is a function > when returning \`true\` > Should run included field 1`] = `
Promise {
  "dump": [Function],
  "errorCount": 2,
  "errors": [
    SummaryFailure {
      "fieldName": "field_1",
      "groupName": undefined,
      "message": undefined,
    },
    SummaryFailure {
      "fieldName": "field_2",
      "groupName": undefined,
      "message": undefined,
    },
  ],
  "getError": [Function],
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getMessage": [Function],
  "getWarning": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": {},
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "isPending": [Function],
  "isTested": [Function],
  "isValid": [Function],
  "isValidByGroup": [Function],
  "pendingCount": 0,
  "suiteName": undefined,
  "testCount": 2,
  "tests": {
    "field_1": SummaryBase {
      "errorCount": 1,
      "errors": [],
      "pendingCount": 0,
      "testCount": 1,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "field_2": SummaryBase {
      "errorCount": 1,
      "errors": [],
      "pendingCount": 0,
      "testCount": 1,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "field_3": SummaryBase {
      "errorCount": 0,
      "errors": [],
      "pendingCount": 0,
      "testCount": 0,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
  },
  "types": undefined,
  "valid": false,
  "warnCount": 0,
  "warnings": [],
}
`;

exports[`include > There is an \`onlyd\` field > include().when() > \`when\` param is a function > when returning \`true\` > should run the included field 1`] = `
Promise {
  "dump": [Function],
  "errorCount": 2,
  "errors": [
    SummaryFailure {
      "fieldName": "field_1",
      "groupName": undefined,
      "message": undefined,
    },
    SummaryFailure {
      "fieldName": "field_2",
      "groupName": undefined,
      "message": undefined,
    },
  ],
  "getError": [Function],
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getMessage": [Function],
  "getWarning": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": {},
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "isPending": [Function],
  "isTested": [Function],
  "isValid": [Function],
  "isValidByGroup": [Function],
  "pendingCount": 0,
  "suiteName": undefined,
  "testCount": 2,
  "tests": {
    "field_1": SummaryBase {
      "errorCount": 1,
      "errors": [],
      "pendingCount": 0,
      "testCount": 1,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "field_2": SummaryBase {
      "errorCount": 1,
      "errors": [],
      "pendingCount": 0,
      "testCount": 1,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "field_3": SummaryBase {
      "errorCount": 0,
      "errors": [],
      "pendingCount": 0,
      "testCount": 0,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
  },
  "types": undefined,
  "valid": false,
  "warnCount": 0,
  "warnings": [],
}
`;

exports[`include > There is an \`onlyd\` field > include().when() > \`when\` param is a string > \`when\` param is a name of a non-included field > Should avoid running the included field 1`] = `
Promise {
  "dump": [Function],
  "errorCount": 1,
  "errors": [
    SummaryFailure {
      "fieldName": "field_1",
      "groupName": undefined,
      "message": undefined,
    },
  ],
  "getError": [Function],
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getMessage": [Function],
  "getWarning": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": {},
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "isPending": [Function],
  "isTested": [Function],
  "isValid": [Function],
  "isValidByGroup": [Function],
  "pendingCount": 0,
  "suiteName": undefined,
  "testCount": 1,
  "tests": {
    "field_1": SummaryBase {
      "errorCount": 1,
      "errors": [],
      "pendingCount": 0,
      "testCount": 1,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "field_2": SummaryBase {
      "errorCount": 0,
      "errors": [],
      "pendingCount": 0,
      "testCount": 0,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "field_3": SummaryBase {
      "errorCount": 0,
      "errors": [],
      "pendingCount": 0,
      "testCount": 0,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
  },
  "types": undefined,
  "valid": false,
  "warnCount": 0,
  "warnings": [],
}
`;

exports[`include > There is an \`onlyd\` field > include().when() > \`when\` param is a string > \`when\` param is a name of a non-included field > should not run the included field 1`] = `
Promise {
  "dump": [Function],
  "errorCount": 1,
  "errors": [
    SummaryFailure {
      "fieldName": "field_1",
      "groupName": undefined,
      "message": undefined,
    },
  ],
  "getError": [Function],
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getMessage": [Function],
  "getWarning": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": {},
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "isPending": [Function],
  "isTested": [Function],
  "isValid": [Function],
  "isValidByGroup": [Function],
  "pendingCount": 0,
  "suiteName": undefined,
  "testCount": 1,
  "tests": {
    "field_1": SummaryBase {
      "errorCount": 1,
      "errors": [],
      "pendingCount": 0,
      "testCount": 1,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "field_2": SummaryBase {
      "errorCount": 0,
      "errors": [],
      "pendingCount": 0,
      "testCount": 0,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "field_3": SummaryBase {
      "errorCount": 0,
      "errors": [],
      "pendingCount": 0,
      "testCount": 0,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
  },
  "types": undefined,
  "valid": false,
  "warnCount": 0,
  "warnings": [],
}
`;

exports[`include > There is an \`onlyd\` field > include().when() > \`when\` param is a string > \`when\` param is a name of a skipped field > Should avoid running the included field 1`] = `
Promise {
  "dump": [Function],
  "errorCount": 1,
  "errors": [
    SummaryFailure {
      "fieldName": "field_1",
      "groupName": undefined,
      "message": undefined,
    },
  ],
  "getError": [Function],
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getMessage": [Function],
  "getWarning": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": {},
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "isPending": [Function],
  "isTested": [Function],
  "isValid": [Function],
  "isValidByGroup": [Function],
  "pendingCount": 0,
  "suiteName": undefined,
  "testCount": 1,
  "tests": {
    "field_1": SummaryBase {
      "errorCount": 1,
      "errors": [],
      "pendingCount": 0,
      "testCount": 1,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "field_2": SummaryBase {
      "errorCount": 0,
      "errors": [],
      "pendingCount": 0,
      "testCount": 0,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "field_3": SummaryBase {
      "errorCount": 0,
      "errors": [],
      "pendingCount": 0,
      "testCount": 0,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
  },
  "types": undefined,
  "valid": false,
  "warnCount": 0,
  "warnings": [],
}
`;

exports[`include > There is an \`onlyd\` field > include().when() > \`when\` param is a string > \`when\` param is a name of a skipped field > should not run the included field 1`] = `
Promise {
  "dump": [Function],
  "errorCount": 1,
  "errors": [
    SummaryFailure {
      "fieldName": "field_1",
      "groupName": undefined,
      "message": undefined,
    },
  ],
  "getError": [Function],
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getMessage": [Function],
  "getWarning": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": {},
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "isPending": [Function],
  "isTested": [Function],
  "isValid": [Function],
  "isValidByGroup": [Function],
  "pendingCount": 0,
  "suiteName": undefined,
  "testCount": 1,
  "tests": {
    "field_1": SummaryBase {
      "errorCount": 1,
      "errors": [],
      "pendingCount": 0,
      "testCount": 1,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "field_2": SummaryBase {
      "errorCount": 0,
      "errors": [],
      "pendingCount": 0,
      "testCount": 0,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "field_3": SummaryBase {
      "errorCount": 0,
      "errors": [],
      "pendingCount": 0,
      "testCount": 0,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
  },
  "types": undefined,
  "valid": false,
  "warnCount": 0,
  "warnings": [],
}
`;

exports[`include > There is an \`onlyd\` field > include().when() > \`when\` param is a string > \`when\` param is a name of an only() field > should run the included field along with the only() field 1`] = `
Promise {
  "dump": [Function],
  "errorCount": 2,
  "errors": [
    SummaryFailure {
      "fieldName": "field_1",
      "groupName": undefined,
      "message": undefined,
    },
    SummaryFailure {
      "fieldName": "field_2",
      "groupName": undefined,
      "message": undefined,
    },
  ],
  "getError": [Function],
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getMessage": [Function],
  "getWarning": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": {},
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "isPending": [Function],
  "isTested": [Function],
  "isValid": [Function],
  "isValidByGroup": [Function],
  "pendingCount": 0,
  "suiteName": undefined,
  "testCount": 2,
  "tests": {
    "field_1": SummaryBase {
      "errorCount": 1,
      "errors": [],
      "pendingCount": 0,
      "testCount": 1,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "field_2": SummaryBase {
      "errorCount": 1,
      "errors": [],
      "pendingCount": 0,
      "testCount": 1,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "field_3": SummaryBase {
      "errorCount": 0,
      "errors": [],
      "pendingCount": 0,
      "testCount": 0,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
  },
  "types": undefined,
  "valid": false,
  "warnCount": 0,
  "warnings": [],
}
`;

exports[`include > There is an \`onlyd\` field > include().when() > \`when\` param is a string > \`when\` param is a name of an onlyd field > Should run included field along with the onlyd field 1`] = `
Promise {
  "dump": [Function],
  "errorCount": 2,
  "errors": [
    SummaryFailure {
      "fieldName": "field_1",
      "groupName": undefined,
      "message": undefined,
    },
    SummaryFailure {
      "fieldName": "field_2",
      "groupName": undefined,
      "message": undefined,
    },
  ],
  "getError": [Function],
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getMessage": [Function],
  "getWarning": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": {},
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "isPending": [Function],
  "isTested": [Function],
  "isValid": [Function],
  "isValidByGroup": [Function],
  "pendingCount": 0,
  "suiteName": undefined,
  "testCount": 2,
  "tests": {
    "field_1": SummaryBase {
      "errorCount": 1,
      "errors": [],
      "pendingCount": 0,
      "testCount": 1,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "field_2": SummaryBase {
      "errorCount": 1,
      "errors": [],
      "pendingCount": 0,
      "testCount": 1,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "field_3": SummaryBase {
      "errorCount": 0,
      "errors": [],
      "pendingCount": 0,
      "testCount": 0,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
  },
  "types": undefined,
  "valid": false,
  "warnCount": 0,
  "warnings": [],
}
`;

exports[`include > When no \`skip\` or \`only\` > include has no effect 1`] = `
Promise {
  "dump": [Function],
  "errorCount": 2,
  "errors": [
    SummaryFailure {
      "fieldName": "field_1",
      "groupName": undefined,
      "message": undefined,
    },
    SummaryFailure {
      "fieldName": "field_2",
      "groupName": undefined,
      "message": undefined,
    },
  ],
  "getError": [Function],
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getMessage": [Function],
  "getWarning": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": {},
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "isPending": [Function],
  "isTested": [Function],
  "isValid": [Function],
  "isValidByGroup": [Function],
  "pendingCount": 0,
  "suiteName": undefined,
  "testCount": 2,
  "tests": {
    "field_1": SummaryBase {
      "errorCount": 1,
      "errors": [],
      "pendingCount": 0,
      "testCount": 1,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "field_2": SummaryBase {
      "errorCount": 1,
      "errors": [],
      "pendingCount": 0,
      "testCount": 1,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
  },
  "types": undefined,
  "valid": false,
  "warnCount": 0,
  "warnings": [],
}
`;

exports[`include > When no \`skip\` or \`only\` > include().when has no effect 1`] = `
Promise {
  "dump": [Function],
  "errorCount": 2,
  "errors": [
    SummaryFailure {
      "fieldName": "field_1",
      "groupName": undefined,
      "message": undefined,
    },
    SummaryFailure {
      "fieldName": "field_2",
      "groupName": undefined,
      "message": undefined,
    },
  ],
  "getError": [Function],
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getMessage": [Function],
  "getWarning": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": {},
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "isPending": [Function],
  "isTested": [Function],
  "isValid": [Function],
  "isValidByGroup": [Function],
  "pendingCount": 0,
  "suiteName": undefined,
  "testCount": 2,
  "tests": {
    "field_1": SummaryBase {
      "errorCount": 1,
      "errors": [],
      "pendingCount": 0,
      "testCount": 1,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "field_2": SummaryBase {
      "errorCount": 1,
      "errors": [],
      "pendingCount": 0,
      "testCount": 1,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
  },
  "types": undefined,
  "valid": false,
  "warnCount": 0,
  "warnings": [],
}
`;
